<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_demo</name>
    <version>0.0.0</version>
    <description>Package containing examples of how to use the rcl API.</description>
    <maintainer email="huchunxu@hust.edu.cn">Hu Chunxu</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rcl</build_depend>
    <build_depend>rmw_implementation</build_depend>

    <exec_depend>rcl</exec_depend>
    <exec_depend>rmw_implementation</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
