<?xml version="1.0"?>
<package>
  <name>household_objects_database_msgs</name>
  <version>0.1.2</version>
  <description>The household_objects_database_msgs package</description>

  <maintainer email="matei.ciocarlie@gmail.com">Matei Ciocarlie</maintainer>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I. Y. Saito</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>shape_msgs</run_depend>  
  <run_depend>object_recognition_msgs</run_depend>  

</package>
